--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3"
 services:
   database: 
     image: postgres
-    container_name: database_space
+    container_name: database_product
     restart: always
     ports: 
       - 5432:5432
     environment:
-      - POSTGRES_USER=space
+      - POSTGRES_USER=product
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=space
+      - POSTGRES_DB=product
     volumes:
       - pgdata:/data/postgres
 
