--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8"
   }
