--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
-    "ts-node-dev": "^1.1.8"
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0"
   }
 }
