--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.5.4",
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.3",
