add env-sample teste local

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,10 @@
-DATABASE_HOST=
-PORT=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE=
+##CREDENTIALS_DOCKER
+
+DATABASE_HOST=localhost
+PORT=5432
+DATABASE_USER=product
+DATABASE_PASSWORD=docker
+DATABASE=product
 
 
 ##storage
